--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   provider: ^6.0.3
   animated_splash_screen: ^1.3.0
   flutter_credit_card: ^3.0.4
+  google_fonts: ^2.1.0
+  flutter_svg: ^0.22.0
+  fl_chart: ^0.36.1
+  data_table_2: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +81,9 @@ flutter:
     - assets/phone5.png
     - assets/phone6.png
     - assets/credit.png
+    - assets/realphone1.jpg
+    - assets/realphone2.jpg
+    - assets/realphone3.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
